[FIX] 출석 시간 내 분기 #98